feat: アクセス遮断を追加

--- a/.container/nginx/conf.d/default.conf
+++ b/.container/nginx/conf.d/default.conf
@@ -1,7 +1,14 @@
 # /etc/nginx/conf.d/default.conf
 server {
+  listen 80 default_server;
+  server_name _;
+  
+  return 444;
+}
+
+server {
   listen 80;
-  server_name localhost;
+  server_name mikusorigin.com;
 
   root /usr/share/nginx/html;
   index index.html;
