feat: DockerfileとNginx設定ファイルを追加し、CloudflareのIP範囲を設定

--- a/container/Dockerfile
+++ b/container/Dockerfile
@@ -28,5 +28,5 @@ RUN npm run build
 FROM nginx:1.29.2 AS runner
 
 RUN rm -rf /etc/nginx/conf.d/*
-COPY .container/nginx/conf.d/*.conf /etc/nginx/conf.d/
+COPY container/nginx/conf.d/*.conf /etc/nginx/conf.d/
 COPY --from=build /usr/src/app/out /usr/share/nginx/html
