--- a/container/nginx/conf.d/default.conf
+++ b/container/nginx/conf.d/default.conf
@@ -8,7 +8,7 @@ server {
 
 server {
   listen 80;
-  server_name mikusorigin.com;
+  server_name localhost;
 
   root /usr/share/nginx/html;
   index index.html;
