--- a/container/manifest/sync/app-mo.yaml
+++ b/container/manifest/sync/app-mo.yaml
@@ -2,7 +2,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mikus-origin-deployment
+  name: mikusorigin-deployment
 spec:
   replicas: 3
   selector:
