--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,7 +10,7 @@ name: ci
 on:
   push:
     branches:
-      - "master"
+      - 'master'
   workflow_dispatch:
 
 jobs:
@@ -19,13 +19,13 @@ jobs:
 
     env:
       REGISTRY: ghcr.io
-      IMAGE: "ghcr.io/${{ github.repository }}:${{ github.sha }}" # サイトのイメージタグ
-      WORK_DIR: ""
-    
+      IMAGE: 'ghcr.io/${{ github.repository }}:${{ github.sha }}' # サイトのイメージタグ
+      WORK_DIR: ''
+
     permissions:
       contents: write
       packages: write
-    
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -71,8 +71,8 @@ jobs:
         uses: mikefarah/yq@master
         with:
           cmd: yq '.spec.template.spec.containers[0].image = env(IMAGE)' -i ${{ env.WORK_DIR }}container/manifest/sync/app-mo.yaml
-      
+
       - name: Commit
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: "ci(fire): Update image to ${{ github.sha }}"
+          commit_message: 'ci(fire): Update image to ${{ github.sha }}'
