--- a/container/manifest/sync/app-mo.yaml
+++ b/container/manifest/sync/app-mo.yaml
@@ -13,9 +13,9 @@ spec:
       labels:
         app: app-mo
       annotations:
-        prometheus.io/scrape: "true"
-        prometheus.io/port: "9113"
-        prometheus.io/path: "/metrics"
+        prometheus.io/scrape: 'true'
+        prometheus.io/port: '9113'
+        prometheus.io/path: '/metrics'
     spec:
       imagePullSecrets:
         - name: ghcr-secret
@@ -24,20 +24,20 @@ spec:
           emptyDir: {}
       containers:
         - name: mikus-origin-container
-          image: "ghcr.io/nekko-lab/mikus_origin.com:c321b3ef30e205a51273074ca4605d21ffdef6b3" # ghcr.io/${{ github.repository }}:${{ github.sha }}
+          image: 'ghcr.io/nekko-lab/mikus_origin.com:c321b3ef30e205a51273074ca4605d21ffdef6b3' # ghcr.io/${{ github.repository }}:${{ github.sha }}
           imagePullPolicy: Always
           resources:
             limits:
-              memory: "2048Mi"
-              cpu: "4"
+              memory: '2048Mi'
+              cpu: '4'
             requests:
-              memory: "256Mi"
-              cpu: "250m"
+              memory: '256Mi'
+              cpu: '250m'
           volumeMounts:
             - name: nginx-logs
               mountPath: /var/log/nginx
         - name: nginx-exporter
-          image: "nginx/nginx-prometheus-exporter:1.5.1"
+          image: 'nginx/nginx-prometheus-exporter:1.5.1'
           args:
             - -nginx.scrape-uri=http://localhost:80/metrics
           ports:
@@ -45,8 +45,8 @@ spec:
               name: metrics
           resources:
             limits:
-              memory: "2048Mi"
-              cpu: "2"
+              memory: '2048Mi'
+              cpu: '2'
             requests:
-              memory: "64Mi"
-              cpu: "100m"
+              memory: '64Mi'
+              cpu: '100m'
